<package format="2">
  <name>inmoov_robot</name>
  <version>0.0.1</version>
  <description>The inmoov_robot package</description>

  <maintainer email="ayushwithyou02100@gmail.com">Ayush Ranjan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
